[package]
name = "make_simple_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "image"
path = "src/image.rs"

[[bin]]
name = "image_cmd"
path = "src/image_cmd.rs"

[[bin]]
name = "image_event"
path = "src/image_event.rs"

# GtkDrawingAreaを使う
[[bin]]
name = "drawing_area"
path="src/image_drawingarea.rs"

[dependencies]
gtk = "0.17.1"
