[package]
name = "offcial_examles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "button_inc"
path = "src/button_inc.rs"

[[bin]]
name = "grid"
path = "src/grid.rs"

[[bin]]
name = "use_clone"
path = "src/use_clone.rs"

[dependencies]
gtk = "0.17.1"
