[package]
name = "wiki_books"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gtk_1"
path = "src/gtk_1.rs"

[[bin]]
name = "gtk_1f"
path = "src/gtk_1f.rs"

[[bin]]
name = "gtk_2"
path = "src/gtk_2.rs"

[[bin]]
name = "gtk_2f"
path = "src/gtk_2f.rs"

[[bin]]
name = "gtk_3"
path = "src/gtk_3.rs"

[[bin]]
name = "gtk_3f"
path = "src/gtk_3f.rs"

[dependencies]
gtk = "0.17.1"
